<resources>
    <string name="app_name">HappyEnvelope</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_weddings">Weddings</string>
    <string name="menu_gifts">Gifts</string>
    <string name="menu_calculation">Calculate</string>
    <string name="calculation_intro">Enter required values to find out how expensive a wedding gift should be!</string>
    <string name="calculation_header_personal">Personal Information</string>
    <string name="calculation_label_salary">How much is your salary?</string>
    <string name="wedding_label_gift">Choose your gift</string>
    <string name="calculation_header_bridalparty">Bridal Party Information</string>
    <string name="calculation_label_relationship">What is your relationship with the Bride or Groom?</string>
    <string name="calculation_label_attending">Will you be attending the wedding?</string>
    <string name="calculation_label_festivities">Did you attend any of the pre-wedding festivities?</string>
    <string name="calculation_header_event">Event Information</string>
    <string name="calculation_label_locale">What is the locale the wedding will be organized in?</string>
    <string name="weddings_intro">List of Weddings</string>
    <string name="weddings_form">Enter new Wedding</string>
    <string name="tw_title_form">Title</string>
    <string name="tw_description_form">Description</string>
    <string name="calculation_label_event">What type of event will the wedding party be?</string>
    <string name="calculation_label_season">In what season will the event be held?</string>
    <string name="calculation_save">Save</string>
    <string name="wedding_update">Update</string>
    <string name="wedding_new">New</string>
    <string name="gift">gift</string>
    <string name="gift_form">Gift</string>
    <string name="calculation_form">Calculation</string>
    <string name="wedding">wedding</string>
    <string name="title">Welcome to Happy Envelope</string>
    <string name="steps">First you need to enter a new wedding and then calculate how much money you need to give for a gift using our calculator. And finally it is necessary to choose a gift according to the calculation. In our application you can save all the weddings you have been to and the gifts you have given.</string>

    <string name="title_activity_gift_detail">GiftDetail</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="tw_home_intro">Receiving wedding gifts is one of the perks of getting married, and your guests are usually only too happy to buy you something wonderful to celebrate your marriage. However, the process of wedding gift giving doesn’t always run smoothly. Here is our simple solution to find right gift for somenones wedding. </string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>