<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_weddings"
            android:icon="@drawable/ic_wedding"
            android:title="@string/menu_weddings" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_gift"
            android:title="@string/menu_gifts" />
        <item
            android:id="@+id/nav_calculation"
            android:icon="@drawable/ic_calculate"
            android:title="@string/menu_calculation" />
    </group>
</menu>