<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="androidx.tvz.hr.happyenvelope.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />


    <fragment
        android:id="@+id/nav_weddings"
        android:name="androidx.tvz.hr.happyenvelope.ui.weddings.view.WeddingsFragment"
        android:label="@string/menu_weddings"
        tools:layout="@layout/fragment_weddings" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="androidx.tvz.hr.happyenvelope.ui.gifts.view.GiftsFragment"
        android:label="@string/menu_gifts"
        tools:layout="@layout/fragment_gifts" />

    <fragment
        android:id="@+id/nav_calculation"
        android:name="androidx.tvz.hr.happyenvelope.ui.calculation.view.CalculationFragment"
        android:label="Calculate"
        tools:layout="@layout/fragment_calculation" />
</navigation>