<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="androidx.tvz.hr.happyenvelope.ui.weddings.view.WeddingsFragment">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tw_weddings_intro"
        android:layout_width="183dp"
        android:layout_height="28dp"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="256dp"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tw_weddings_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/weddings_intro" />

    <ListView
        android:id="@+id/wedding_list"
        android:layout_width="0dp"
        android:layout_height="wrap_content"

        app:layout_constraintBottom_toTopOf="@+id/tw_weddings_form"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_weddings_intro">


    </ListView>


    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tw_weddings_form"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="240dp"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_weddings_intro"
        tools:text="Test" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tw_title_form"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_weddings_form"
        tools:text="@string/tw_title_form" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_calculation_label_relationship"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="306dp"
        android:gravity="center"
        android:hint="Test"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tw_title_form">

        <AutoCompleteTextView
            android:id="@+id/tw_calculation_relationship_dropdown"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="none"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tw_description_form"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_calculation_label_relationship"
        tools:text="@string/tw_description_form" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_descritpion"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:hint="Test"
        app:layout_constraintTop_toBottomOf="@+id/tw_description_form">

        <AutoCompleteTextView
            android:id="@+id/tw_calculation_relationship"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:inputType="none" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/tw_gift_form"
        style="@style/TextAppearance.MaterialComponents.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_descritpion"
        tools:text="@string/gift_form" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tf_"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:hint="@string/calculation_label_locale"
        app:layout_constraintTop_toBottomOf="@+id/tw_gift_form">

    <AutoCompleteTextView
        android:id="@+id/tw_calculation_locale_dropdown"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="none"
        app:layout_constraintTop_toTopOf="@+id/tf_calculation_label_locale" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/outlinedButton"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/calculation_save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tf_descritpion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tf_descritpion" />





</androidx.constraintlayout.widget.ConstraintLayout>